--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,6 +11,7 @@ $contact-input: #95989A;
 $contact-text: #707070;
 $info-text: #A5A5A5;
 $info-shadows: #00000029;
+$color-light-grey: #F7F7F7;
 // Sizes
 $logo-size: 2em;
 // media
@@ -26,3 +27,14 @@ $tertiary-header: 1.875em;
 $paragraph-size: 1em;
 $favour-size: 1.25em;
 $price-text-size: 2.875em;
+
+
+// CodersLab
+$color-primary: #08A6E4;
+$color-primary-shadow: rgba(7, 172, 230, .16);
+$color-redish: #FB3B64;
+$color-green: #55DFB4;
+$color-black: #000000;
+$color-white: #ffffff;
+$color-grey: #A5A5A5;
+$color-light-grey: #F7F7F7;
