--- a/scss/main.scss
+++ b/scss/main.scss
@@ -75,13 +75,22 @@ body {
     color: white;
 }
 
+@mixin navbarLines($top) {
+    position: absolute;
+            height: 3px;
+            border-radius: 1.5px;
+            background-color: #fff44f;
+            top: $top;
+            transition: .4s;
+}
+
 .navbar {
+    position: relative;
     width: 100vw;
     background-color: rgba(169, 169, 169, 0.185);
+    box-shadow: 0px 3px 6px $info-shadows;
     .container {
-        @media screen and (min-width: $mobile-nav-small-size) {
-            display: flex;
-        }
+        display: flex;
     }
     .navbar__logo {
         color: $professional-secondary;
@@ -90,37 +99,120 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        text-align: center;
+        text-align: left;
+        line-height: 2em;
     }
+
     .navbar__navigation {
-        margin-left: auto;
-        .navbar__menu {
-            list-style: none;
-            display: flex;
-            flex-wrap: wrap;
-            @media screen and (min-width: $mobile-nav-small-size) {
-                flex-wrap: nowrap;
-            }
-            .navbar__item {
-                line-height: 3.5rem;
-                width: 100%;
-                text-align: center;
-                @media screen and (min-width: $mobile-nav-small-size) {
-                    width: fit-content;
-                    padding: 0 1em;
-                    margin: 0 0.5em;
-                }
-                @media screen and (min-width: $mobile-nav-medium-size) {
-                    width: fit-content;
-                    padding: 0 1em;
-                    margin: 0 1.5em;
-                }
-            }
-            .navbar__item:hover {
-                border-bottom: 2px solid $professional-secondary;
-                line-height: calc(3em - 2px);
-            }
+        position: absolute;
+        top: 0;
+        right: 30px;
+        .navbar__toggler {
+            position: absolute;
+            top: 0.9em;
+            right: 32px;
+            width: 3.5em;
+            height: 3em;
+            opacity: 0;
         }
+
+        .navbar__hamburger {
+            width: 5em;
+        }
+        .navbar__hamburger>div{
+            width: 60%;
+            @include navbarLines(0.9em)
+        }
+        
+        .navbar__hamburger>div:before{
+            content: '';
+            width: 100%;
+            @include navbarLines(1em)
+        }
+        
+        .navbar__hamburger>div:after{
+            content: '';
+            width: 100%;
+            @include navbarLines(2em)
+        }
+
+        .navbar__menu {
+            position: fixed;
+            top: 0;
+            left: right;
+            // width: 100%;
+            // height: 100%;
+            // visibility: hidden;
+            transition: .6s;
+        }
+        .menu {
+        }
+        .menu > div{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translateX(-200%) translateY(4.4em);
+            width: 100vw;
+            height: 8.75em;
+            background-color: rgb(255, 255, 255);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            transition: .6s;
+            box-shadow: 0px 2px 4px $info-shadows;
+        }
+        
+        .menu > div > div{
+            max-width: 90vw;
+            max-height: 100vh;
+            transition: .6s;
+        }
+        
+        .menu > div > div > ul {
+            margin: 1em 0;
+        }
+
+        .menu > div > div > ul > li {
+            list-style: none;
+            color: #A5A5A5;
+            text-transform: uppercase;
+            line-height: 2em;
+            letter-spacing: 3.28px;
+            font: Bold 11px/15px Open Sans;
+            margin: 1em 0;
+        }
+        
+        .menu > div > div > ul > li:hover {
+            color: black;
+        }
+
+        // .menu > div > div > ul > li > a{
+        //     text-decoration: none;
+        //     color: #fff;
+        //     font-weight: 550;
+        //     text-transform: uppercase;
+        //     margin: .5rem;
+        //     transition: .3s;
+        //     font-size: 1.2rem;
+        //     display: inline-block;
+        // }
+        
+        // .menu > div > div > ul > li > a:hover{
+        //     color: #fff44f;
+        // }
+        
+        // .navbar__toggler:checked ~ .menu{
+        //     visibility: visible;
+        // }
+        
+        .navbar__toggler:checked ~ .menu > div{
+            transform: translateX(-100%) translateY(4.4em);
+        }
+        
+        // .navbar__toggler:checked ~ .menu > div > div{
+        //     opacity: 1;
+        // }
     }
 }
 
@@ -560,6 +652,239 @@ body {
         }
     }
 }
+
+/* CALCULATOR */
+
+.calc {
+    @mixin tablet {
+        @media (max-width: 1024px) {
+          @content;
+        }
+      }
+      
+    padding: 80px 0;
+    margin-bottom: 5%;
+    background-color: $color-light-grey;
+    font: "Open Sans" 12px/17px Open Sans;
+  
+    @include tablet {
+      padding: 30px 15px;
+    }
+  
+    h2 {
+      text-align: center;
+    }
+  
+    &__columns {
+      max-width: 865px;
+      margin: 50px auto 0;
+      display: flex;
+  
+      @include tablet {
+        display: block;
+      }
+    }
+  
+    &__form {
+      width: 50%;
+      margin-right: 20px;
+  
+      @include tablet {
+        width: 100%;
+        margin-right: 0;
+      }
+    }
+  
+  
+    &__input input,
+    &__select .select__input {
+      color: $info-text;
+      width: 100%;
+      border-radius: 6px;
+      border: 1px solid $professional-secondary;
+      padding: 11px 20px;
+      line-height: 1em;
+      font-size: 0.8125rem;
+      box-shadow: 0px 3px 6px $color-primary-shadow;
+      margin-bottom: 20px;
+      background-color: $color-white;
+    }
+  
+    &__input {
+      input {
+        &::placeholder {
+          color: $info-text;
+        }
+      }
+    }
+  
+    &__select {
+      position: relative;
+  
+      .select__input {
+        position: relative;
+        height: 40px;
+        vertical-align: middle;
+        padding: 13px 20px;
+        cursor: pointer;
+  
+        &::after {
+          content: "";
+          background-image: url("../images/Arrow\ Down.svg");
+          width: 22px;
+          height: 22px;
+          display: block;
+          position: absolute;
+          right: 14px;
+          top: 9px;
+        }
+      }
+  
+      .select__dropdown {
+        position: absolute;
+        z-index: 1;
+        background-color: white;
+        width: 100%;
+        border-radius: 6px;
+        border: 1px solid $color-redish;
+        overflow: hidden;
+  
+        li {
+          font-size: 13px;
+          padding: 10px 20px;
+          cursor: pointer;
+  
+          &:hover {
+            background-color: $color-light-grey;
+          }
+        }
+        &.d-none {
+            display: none;
+        }
+      }
+  
+  
+      &.open {
+        .select__input::after {
+          transform: rotate(180deg);
+        }
+  
+        .select__dropdown {
+          display: block;
+        }
+      }
+    }
+  
+    .form__checkbox {
+        display: flex;
+        padding-bottom: 4%;
+      .consent__text {
+        padding-top: 4px;
+      }
+      input[type="checkbox"] {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        margin-right: 10px;
+        height: 24px;
+        min-width: 24px;
+        max-width: 24px;
+        display: inline-block;
+        vertical-align: middle;
+        border-radius: 5px;
+        box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.4);
+        background: white;
+        outline: none;
+        position: relative;
+        }
+    
+    input[type="checkbox"]:checked {
+        color: var(--color-professional);
+        }
+    
+    input[type="checkbox"]:checked:after {
+        content: "";
+        width: 11px;
+        height: 11px;
+        background-image: url("../images/Checkmark.svg");
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        }  
+    }
+  
+    &__summary {
+      width: 50%;
+      margin-left: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;  
+
+      @include tablet {
+        width: 100%;
+        margin-left: 0;
+        margin-top: 30px;
+      }
+  
+      
+
+      .summary__total,
+      .list__item {
+        box-shadow: 0px 3px 6px rgba(0, 0, 0, .16);
+        border-radius: 6px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color: $color-white;
+        font-size: 0.875rem;
+  
+        &.open {
+          display: flex;
+        }
+        .item__type{
+            min-width: 30%;
+        }
+        .item__calc {
+            margin: 0 auto;
+        }
+        .item__price {
+            min-width: 30%;
+            text-align: right;
+        }
+      }
+
+      .d-none {
+        display: none;
+      }
+  
+      .summary__total {
+        width: 50%;
+        align-self: flex-end;
+        margin-top: 22px;
+        padding: 8px 20px;
+        background-color: $color-primary;
+  
+        .total__price {
+          font-size: 1.25rem;
+          font-weight: 700;
+        }
+      }
+  
+      .list__item {
+        padding: 6px 20px;
+        background-color: $color-green;
+        margin-bottom: 8px;
+  
+        .item {
+          &__price {
+            font-weight: 700;
+            font-size: 1.125rem;
+          }
+        }
+      }
+    }
+  }
 
 /* CONTACT */
 
