--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,7 @@ p span {
   align-self: center;
   height: 2em;
   width: 2em;
+  transition: 0.5s;
 }
 @media screen and (min-width: 750px) {
   .navbar__hamburger {
@@ -140,6 +141,17 @@ p span {
   top: 75%;
   transition: 0.4s;
 }
+.navbar__exit .navbar__line:nth-child(1) {
+  top: 50%;
+  transform: rotate(-405deg);
+}
+.navbar__exit .navbar__line:nth-child(2) {
+  transform: scale(0);
+}
+.navbar__exit .navbar__line:nth-child(3) {
+  top: 50%;
+  transform: rotate(405deg);
+}
 .navbar__navigation {
   position: absolute;
   top: 165%;
@@ -148,6 +160,7 @@ p span {
   margin: 0 auto;
   background-color: white;
   box-shadow: 0px 3px 6px #00000029;
+  transition: 0.5s;
 }
 @media screen and (min-width: 750px) {
   .navbar__navigation {
